<resources>
    <string name="app_name">SunClock</string>
    <string name="pref_description_auto_location">Use the GPS to determine location for the purpose of computing sunrise and sunset times.</string>
    <string name="pref_title_auto_location">Automatic Location</string>
    <string name="pref_custom_latitude">Custom Latitude</string>
    <string name="pref_description_custom_latitude">Latitude of the location to use for calculating events.</string>
    <string name="pref_description_custom_longitude">Longtitude of the location to use for calculating events.</string>
    <string name="pref_custom_longitude">Custom Longitude</string>
    <string name="pref_lookup_location">Look Up Location</string>
    <string name="pref_description_lookup_location">Look up a custom location by entering a city, zip code, etc.</string>
    <string name="lookup_location_message">Enter the name of a location, such as a city or zip code.</string>
    <string name="lookup_location_title">Look Up Location</string>
    <string name="lookup_location_description">Enter a place name, such as a city, address, zip code, airport, etc.</string>
    <string name="lookup_location_no_geocoder">Sorry, the Google geocoding service is not available on this device</string>
    <string name="lookup_location_no_network">You must be connected to the Internet to use the geocoding features.</string>
    <string name="lookup_location_not_found">Could not match the entered location to a latitude and longitude.</string>
    <string name="within">Within</string>
    <string name="tide_station_distance_default">20</string>
</resources>
