<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="auto_location"
        android:title="@string/pref_title_auto_location"
        android:summary="@string/pref_description_auto_location"
        android:defaultValue="true" />

    <Preference
        android:key="lookup_location"
        android:title="@string/pref_lookup_location"
        android:summary="@string/pref_description_lookup_location" />

    <EditTextPreference
        android:key="custom_latitude"
        android:title="@string/pref_custom_latitude"
        android:summary="@string/pref_description_custom_latitude" />

    <EditTextPreference
        android:key="custom_longitude"
        android:title="@string/pref_custom_longitude"
        android:summary="@string/pref_description_custom_longitude" />

    <Preference
        android:key="tide_station"
        android:title="Tide Station"
        android:summary="Tide station to compute tides at." />

</PreferenceScreen>
